[metadata]
name = Topsis_Nipun_Garg_102003674
version = 0.0.2
author = Nipun Garg
author_email = ngarg4_be20@thapar.edu
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src